--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Replace John Doe with your name -->
 
-    <p>Hi, I am John Doe, I am a Kalvian.</p>
+    <p>Hi, I am gargeya mithra, I am a Kalvian , i am from squad 82.</p>
 
 </body>
 
